--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^9.1.5",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.12"
+    "nodemailer": "^7.0.12",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
